Update index.html with new styling and content

--- a/index.html
+++ b/index.html
@@ -2,13 +2,40 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>わんこの名刺 - ポリシー</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Hiragino Sans', 'Noto Sans JP', sans-serif;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 24px 16px 64px;
+      color: #333;
+      line-height: 1.8;
+      text-align: center;
+    }
+    h1 { font-size: 28px; margin-top: 48px; }
+    p { color: #666; }
+    .links { margin-top: 32px; }
+    .links a {
+      display: inline-block;
+      margin: 8px;
+      padding: 12px 32px;
+      background: #f0a500;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 16px;
+    }
+    .links a:hover { background: #d4920a; }
+  </style>
 </head>
 <body>
-  <h1>わんこの名刺</h1>
-  <ul>
-    <li><a href="privacy.html">プライバシーポリシー</a></li>
-    <li><a href="terms.html">利用規約</a></li>
-  </ul>
+  <h1>🐾 わんこの名刺</h1>
+  <p>アプリに関する各種ポリシーをご確認いただけます。</p>
+  <div class="links">
+    <a href="privacy.html">プライバシーポリシー</a>
+    <a href="terms.html">利用規約</a>
+  </div>
 </body>
 </html>
