Update privacy policy author name to English

--- a/privacy.html
+++ b/privacy.html
@@ -33,7 +33,7 @@
   <p class="updated">最終更新日：2026年2月26日</p>
 
   <p>
-    藤原友裕（以下「当方」）は、「わんこの名刺」（以下「本アプリ」）における
+    Tomohiro Fujiwara（以下「当方」）は、「わんこの名刺」（以下「本アプリ」）における
     ユーザーの個人情報の取扱いについて、以下の通りプライバシーポリシーを定めます。
   </p>
 
