Update author name in terms of service

--- a/terms.html
+++ b/terms.html
@@ -33,7 +33,7 @@
   <p class="updated">最終更新日：2026年2月26日</p>
 
   <p>
-    本利用規約（以下「本規約」）は、藤原友裕（以下「当方」）が提供する
+    本利用規約（以下「本規約」）は、Tomohiro Fujiwara（以下「当方」）が提供する
     「わんこの名刺」（以下「本アプリ」）の利用条件を定めるものです。
     本アプリをご利用いただく場合、本規約に同意したものとみなします。
   </p>
